--- a/src/居中/图片垂直居中.html
+++ b/src/居中/图片垂直居中.html
@@ -16,7 +16,7 @@
 <body>
 <h1>垂直居中一张图片</h1>
 <div id="parent">
-    <img src="../../img/a_r.png" alt="" width="50" height="50"/>
+    <img src="./img/a_r.png" alt="" width="50" height="50"/>
 </div>
 </body>
 </html>
