手风琴菜单

--- a/src/菜单/css3垂直手风琴下拉列表菜单/test/index.html
+++ b/src/菜单/css3垂直手风琴下拉列表菜单/test/index.html
@@ -12,7 +12,7 @@
   	<![endif]-->
   </head>
   <body>
-     <ul class="tree">
+     <ul class="tree animated">
        <li class="has-children">
          <input type="checkbox" id="group-1" />
          <label for="group-1">Group-1</label>
