--- a/src/Loading/demo3/index.html
+++ b/src/Loading/demo3/index.html
@@ -5,7 +5,6 @@
     <title>CSS3实现Loading</title>
     <link rel="stylesheet" type="text/css" href="../index.css" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script src="../index.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="content-wrap">
@@ -13,7 +12,7 @@
         <div>
           内容内容内容内容让女人
         </div>
-        <button onclick="btnOnClick()">按钮</button>
+        <button onclick="alert(按钮被点击了)">按钮</button>
       </div>
       <div class="loading-wrap">
         <div class="spinner">
