--- a/src/canvas绘制雨滴特效/public/test3.html
+++ b/src/canvas绘制雨滴特效/public/test3.html
@@ -2,16 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>canvas绘制矩形</title>
+        <title>canvas绘制圆</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
     </head>
     <body>
         <canvas id="canvas"></canvas>
         <script type="text/javascript" src="./js/Util.js"></script>
         <script type="text/javascript">
-            window.onload = function () {
-
-            }
             var can = document.getElementById("canvas");
             // 设置canvas绘图环境
             var cxt = can.getContext("2d");
@@ -24,9 +21,13 @@
                 pageWidth = can.width = window.innerWidth;
                 pageHeight = can.height = window.innerHeight;
             }
-            cxt.fillStyle = "red";
-            // 绘制矩形(x坐标，y坐标，宽，高)
-            cxt.fillRect(100,100,50,50);
+            // cxt.fillStyle = "red";
+            // 绘制圆:圆心坐标(x轴和y轴)，半径，0-360(从0度绘制到360度，是一个整圆)，逆时针false(顺时针true)
+            cxt.arc(200, 200, 50, 0, Math.PI*2, false);
+            // cxt.fill();
+            cxt.strokeStyle = "#fff";
+            // 触笔方法，绘制边框
+            cxt.stroke();
         </script>
     </body>
 </html>
