--- a/src/canvas绘制雨滴特效/public/index.html
+++ b/src/canvas绘制雨滴特效/public/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="keywords" content="" />
+        <meta name="description" content="" />
         <title>canvas绘制雨滴特效</title>
         <link rel="stylesheet" type="text/css" href="./css/index.css" />
     </head>
